<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <GVL Name="GVL_CompensationGroup" Id="{a6d50ffd-99be-498e-8a15-4782bd080f13}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL CONSTANT
    MAX_COMPENSATION_GROUPS : INT := 20;        // Maksimum kompanzasyon grup sayısı
    MAX_TOTAL_CAPACITORS : INT := 100;          // Maksimum toplam kondansatör sayısı
    MAX_TAG_LENGTH : INT := 30;                 // Maksimum etiket uzunluğu
    MAX_PRODUCT_CODE_LENGTH : INT := 50;        // Maksimum ürün kodu uzunluğu
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>